# MSA-FastApi-base

./: .dockerignore  .env  .env.template  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose-prod.yml  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
.githooks/: commit-msg
app/: database.py  deps.py  log_config.py  main.py  settings.py
app/migrations/: env.py
app/models/: __init__.py  base.py  example.py
app/repositories/: base.py  example.py
app/routes/: api_router.py  examples.py
app/schemas/: example.py
app/services/: examples.py
