[tool.poetry]
name = "msa-fastapi-base"
version = "0.1.0"
description = "Base app by MSA with FastApi"
authors = ["sdparada97 <sdparada97@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
